# FEMprjct

./: CMakeLists.txt
src/fem/: FEMSolver2D.cpp  FEMSolver2D.h  solver.cpp
src/geometry/: NetGeometry.cpp  NetGeometry.h  worldGen.cpp
